config/network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mosaic-controller-artifacts
  namespace: mosaic-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mosaic-controller
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flux-system
          podSelector:
            matchLabels:
              app: kustomize-controller
      ports:
        - protocol: TCP
          port: 9090
